made changes based on review and fixed nav bar not closing on mobile

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -32,6 +32,9 @@
         -ms-flex-pack: justify;
         justify-content: space-between;
     }
+    .pricetable-padding {
+        padding-top: 54px;
+    }
 }
 
 
