--- a/public/style.css
+++ b/public/style.css
@@ -175,8 +175,8 @@ input:-webkit-autofill:focus {
     background: #ffffff;
     background: -webkit-gradient(linear, left top, left bottom, from(#75cbe7), to(#138fc2));
     /* background: linear-gradient(to bottom, #fac105 0%, #fbff11 100%);  */
-    background: linear-gradient(to bottom, #e66587 0%, #f09458 100%); 
-    /* background: linear-gradient(to bottom, rgb(5 184 250) 0%, rgb(17 255 209 100%);  */
+    /* background: linear-gradient(to bottom, #e66587 0%, #f09458 100%);  */
+    background: linear-gradient(to bottom, #333 0%, #333 100%); 
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#75cbe7', endColorstr='#138fc2', GradientType=0);
     color: #ffffff;
 }
@@ -651,9 +651,9 @@ input:-webkit-autofill:focus {
 ***/
 
 .price-area {
-    /* background: url('./images/forest_12.jpg') no-repeat scroll center center / cover */
+    background: url('./images/notebook.jpg') no-repeat scroll center center / cover
 }
-/* #222 */
+
 .price-table h3 {
     margin-bottom: 30px;
 }
@@ -679,9 +679,9 @@ input:-webkit-autofill:focus {
     list-style: none;
 }
 
-.price-table ul li {
+/* .price-table ul li {
     padding: 5px 0;
-}
+} */
 
 .price-table .price-info {
     position: absolute;
@@ -947,6 +947,10 @@ preloader
 .sk-folding-cube .sk-cube4:before {
     -webkit-animation-delay: 0.9s;
     animation-delay: 0.9s;
+}
+
+.pricetable-padding {
+    padding-top: 27px;
 }
 
 @-webkit-keyframes sk-foldCubeAngle {
